Implemented authentication with Google. Using OAuth.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.security.oauth2.client.registration.google.client-id=429431840323-tj53u19s61m4cmtqklf9p9u8rdonlfsd.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
+spring.security.oauth2.client.registration.facebook.client-id=254221290629231
+spring.security.oauth2.client.registration.facebook.client-secret=5afe0670544101d50960552300580e2f
+
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/webAppHomework
